0.3. BufferedReader.