@@ -2,15 +2,14 @@ package ru.job4j.io;
 
 import java.io.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class LogFilter {
     public static List<String> filter(String file) {
         List<String> filteredLines = null;
         try (BufferedReader in = new BufferedReader(new FileReader(file))) {
             filteredLines = in.lines()
-                    .filter(s -> s.matches("(.*) 404 (.*)"))
-                    .collect(Collectors.toList());
+                    .filter(s -> s.contains(" 404 "))
+                    .toList();
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -30,7 +29,7 @@ public class LogFilter {
 
     public static void main(String[] args) {
         List<String> log = filter("log.txt");
-        System.out.println(log);
+        log.forEach(System.out::println);
         save(log, "404.txt");
     }
 }
